--- a/q_learning_workshop.ipynb
+++ b/q_learning_workshop.ipynb
@@ -6,7 +6,11 @@
    "outputs": [],
    "source": [
     "# !pip install gym\n",
+    "# !pip install gym[toy_text]\n",
     "# !pip install numpy\n",
+    "# !pip install matplotlib\n",
+    "# !pip install tqdm\n",
+    "\n",
     "\n",
     "import gym\n",
     "import numpy as np"
@@ -40,7 +44,7 @@
     "env = gym.make('FrozenLake-v1', is_slippery=False, map_name='4x4')\n",
     "q_table = np.zeros([env.observation_space.n, env.action_space.n])\n",
     "gamma = 0.9\n",
-    "alpha = 0.05\n",
+    "alpha = 1\n",
     "epsilon = 0.25"
    ],
    "metadata": {
@@ -66,7 +70,16 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1456179549.py, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;36m  Input \u001B[0;32mIn [3]\u001B[0;36m\u001B[0m\n\u001B[0;31m    action = SOMETHING ELSE\u001B[0m\n\u001B[0m                       ^\u001B[0m\n\u001B[0;31mSyntaxError\u001B[0m\u001B[0;31m:\u001B[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def choose_action(state):\n",
     "    #Hint: random action based on epsilon, otherwise greedy action\n",
@@ -99,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "def update_q_table(state, action, reward, next_state):\n",
@@ -115,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "def play():\n",
@@ -141,16 +154,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10000/10000 [00:05<00:00, 1703.76it/s]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "import tqdm\n",
     "all_rewards = []\n",
@@ -168,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "env.render()\n",
@@ -183,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -199,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "print(q_table)"
